Add new title in the html

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>TamilRadio FM | Corneon AI</title>
-  <meta name="description" content="TamilRadio FM by Corneon AI — Listen to Tamil FM radio stations live. Music, devotional, news, talk & more." />
+  <title>RadioTamil – Live Tamil FM | Corneon AI</title>
+  <meta name="description" content="RadioTamil – Live Tamil FM by Corneon AI — Listen to Tamil FM radio stations live. Music, devotional, news, talk & more." />
   <meta name="theme-color" content="#b76e79" />
 
   <style>
@@ -267,7 +267,7 @@
       <div class="brand">
         <div class="logo" aria-hidden="true"></div>
         <div>
-          Corneon AI <small>• TamilRadio FM</small>
+          Corneon AI <small>• RadioTamil – Live Tamil FM</small>
         </div>
       </div>
 
@@ -288,7 +288,7 @@
 
           <h1>Listen. Save favorites. Keep it playing.</h1>
           <p class="sub">
-            TamilRadio FM is a clean, fast radio app that helps you discover Tamil stations and enjoy
+            RadioTamil – Live Tamil FM is a clean, fast radio app that helps you discover Tamil stations and enjoy
             music, devotional, news and talk — with a smooth, modern player.
           </p>
 
@@ -310,12 +310,12 @@
       <!-- Screens -->
       <div class="panel device" id="screens">
         <div class="device-inner">
-          <div class="device-title">Real app screens – TamilRadio FM Screens</div>
+          <div class="device-title">Real app screens – RadioTamil – Live Tamil FM Screens</div>
           <div class="device-sub">Home • Search • Stations • Now Playing</div>
 
           <div class="shots">
             <div class="shot">
-              <img src="./images/screen_home.png" alt="TamilRadio FM Home Screen">
+              <img src="./images/screen_home.png" alt="RadioTamil – Live Tamil FM Home Screen">
               <div class="caption">Home</div>
             </div>
 
@@ -371,7 +371,7 @@
           <details open>
             <summary>Do you host the radio streams?</summary>
             <p>
-              No. TamilRadio FM provides access to publicly available stream links. Streams, names, and logos are managed by their respective providers.
+              No. RadioTamil – Live Tamil FM provides access to publicly available stream links. Streams, names, and logos are managed by their respective providers.
             </p>
           </details>
 
@@ -394,7 +394,7 @@
 
     <!-- Footer -->
     <div class="footer">
-      <div>© <span id="y"></span> Corneon AI • TamilRadio FM</div>
+      <div>© <span id="y"></span> Corneon AI • RadioTamil – Live Tamil FM</div>
       <div style="display:flex; gap:14px; flex-wrap:wrap;">
         <a href="./privacy.html">Privacy</a>
         <a href="./support.html">Support</a>
