--- a/privacy.html
+++ b/privacy.html
@@ -3,8 +3,11 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>TamilRadio FM - Privacy Policy | Corneon AI</title>
-  <meta name="description" content="Privacy Policy for TamilRadio FM by Corneon AI." />
+
+  <title>RadioTamil – Live Tamil FM | Privacy Policy | Corneon AI</title>
+
+  <meta name="description" content="Privacy Policy for RadioTamil – Live Tamil FM by Corneon AI." />
+
   <meta name="theme-color" content="#b76e79" />
 
   <style>
@@ -103,7 +106,7 @@
     <div class="topbar">
       <div class="brand">
         <div class="logo" aria-hidden="true"></div>
-        <div>Corneon AI <small>• TamilRadio FM</small></div>
+        <div>Corneon AI <small>• RadioTamil – Live Tamil FM</small></div>
       </div>
       <div class="nav">
         <a href="./index.html">Home</a>
@@ -115,76 +118,78 @@
       <div class="panel-inner">
         <div class="badge"><span class="dot"></span> Privacy Policy</div>
 
-        <h1 style="margin-top:12px;">TamilRadio FM - Privacy Policy</h1>
+        <h1 style="margin-top:12px;">RadioTamil – Live Tamil FM · Privacy Policy</h1>
         <p class="muted">Last updated: 2026-01-28</p>
 
-        <p><b>TamilRadio FM</b> is a radio streaming app published by <b>Corneon AI</b>. We respect your privacy. This Privacy Policy explains what information we collect, how we use it, and your choices.</p>
+        <p>
+          <b>RadioTamil – Live Tamil FM</b> is a radio streaming app published by <b>Corneon AI</b>.
+          We respect your privacy. This Privacy Policy explains what information we collect, how we use it, and your choices.
+        </p>
 
         <h2>1) Information We Collect</h2>
         <p><b>We do not ask for or collect personal information</b> such as your name, phone number, address, contacts, or payment information.</p>
-        <p>Depending on how the app is configured, the app may collect limited information such as:</p>
+
+        <p>The app may collect limited information such as:</p>
         <ul>
-          <li><b>App activity & performance data</b> (e.g., basic usage events, crash logs, diagnostics, and performance metrics) to improve stability and performance.</li>
-          <li><b>Advertising ID</b> (only if ads are enabled) to show and measure ads and reduce irrelevant ad repetition.</li>
-          <li><b>Log data</b> (technical information such as device model, OS version, and network type) when the app encounters an error.</li>
+          <li><b>App activity & performance data</b> (usage events, crash logs, diagnostics)</li>
+          <li><b>Advertising ID</b> (only if ads are enabled)</li>
+          <li><b>Log data</b> (device model, OS version, network type)</li>
         </ul>
 
         <h2>2) How We Use Information</h2>
         <ul>
           <li>To provide and maintain streaming functionality</li>
-          <li>To fix crashes, improve performance, and enhance user experience</li>
-          <li>To understand feature usage and improve the product</li>
-          <li>To display ads (only if ads are enabled)</li>
+          <li>To improve performance and fix crashes</li>
+          <li>To enhance user experience</li>
+          <li>To display ads (only if enabled)</li>
         </ul>
 
         <h2>3) Radio Streams & Content</h2>
         <p>
-          TamilRadio FM provides access to publicly available radio stream links. We do not host or own the radio streams unless explicitly stated.
-          Stream availability, audio content, and station metadata are controlled by the respective station providers.
+          RadioTamil – Live Tamil FM provides access to publicly available radio stream links.
+          We do not host or own radio streams unless explicitly stated.
         </p>
 
         <h2>4) Permissions</h2>
         <ul>
           <li><b>Internet</b>: required to stream radio content</li>
-          <li><b>Foreground service / notifications</b> (if enabled): used for audio playback controls and persistent playback while streaming</li>
+          <li><b>Foreground service / notifications</b>: for playback controls (if enabled)</li>
         </ul>
 
         <h2>5) Third-Party Services</h2>
         <p>
-          The app may use third-party services for analytics, crash reporting, or advertising (only if enabled).
-          These services may collect limited information as described above, under their respective privacy policies.
+          The app may use third-party services for analytics, crash reporting, or advertising (if enabled),
+          each governed by their own privacy policies.
         </p>
 
         <h2>6) Data Sharing</h2>
         <p>
-          We do not sell your personal data. Limited data (such as crash logs, diagnostics, and Advertising ID if ads are enabled) may be shared with service providers
-          only for operating, improving, and monetizing the app (for example analytics/crash tools and ad networks when enabled).
+          We do not sell your data. Limited technical data may be shared only to operate and improve the app.
         </p>
 
         <h2>7) Data Retention</h2>
         <p>
-          We keep collected data only for as long as needed for the purposes described in this policy (e.g., to improve stability and performance),
-          and as required by applicable laws or service provider retention rules.
+          Data is retained only as long as necessary for performance, analytics, or legal compliance.
         </p>
 
         <h2>8) Security</h2>
-        <p>We take reasonable measures to protect information. However, no method of transmission over the Internet is 100% secure.</p>
+        <p>No internet transmission is 100% secure, but we take reasonable safeguards.</p>
 
         <h2>9) Your Choices</h2>
         <ul>
-          <li>You can uninstall the app at any time to stop further data collection.</li>
-          <li>If ads are enabled, you can reset or limit your Advertising ID in your device settings.</li>
+          <li>You may uninstall the app at any time</li>
+          <li>You can limit Advertising ID in device settings (if ads are enabled)</li>
         </ul>
 
         <h2>10) Children’s Privacy</h2>
-        <p>TamilRadio FM is not directed to children under 13 and we do not knowingly collect personal data from children.</p>
+        <p>RadioTamil – Live Tamil FM is not intended for children under 13.</p>
 
         <h2>11) Changes to This Policy</h2>
-        <p>We may update this Privacy Policy from time to time. Changes will be posted on this page and the “Last updated” date will be revised accordingly.</p>
+        <p>We may update this policy and revise the “Last updated” date accordingly.</p>
 
         <h2>12) Contact</h2>
         <p>
-          If you have questions about this Privacy Policy, contact us at:
+          Questions? Email:
           <a class="link" href="mailto:psgtech.mohan@gmail.com">psgtech.mohan@gmail.com</a>
         </p>
 
