--- a/support.html
+++ b/support.html
@@ -3,8 +3,11 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>TamilRadio FM - Support | Corneon AI</title>
-  <meta name="description" content="Support page for TamilRadio FM by Corneon AI." />
+
+  <title>RadioTamil – Live Tamil FM - Support | Corneon AI</title>
+
+  <meta name="description" content="Support page for RadioTamil – Live Tamil FM by Corneon AI." />
+
   <meta name="theme-color" content="#b76e79" />
 
   <style>
@@ -123,8 +126,9 @@
     <div class="topbar">
       <div class="brand">
         <div class="logo" aria-hidden="true"></div>
-        <div>Corneon AI <small>• TamilRadio FM</small></div>
+        <div>Corneon AI <small>• RadioTamil – Live Tamil FM</small></div>
       </div>
+
       <div class="nav">
         <a href="./index.html">Home</a>
         <a href="./privacy.html">Privacy</a>
@@ -135,7 +139,7 @@
       <div class="panel-inner">
         <div class="badge"><span class="dot"></span> Support</div>
 
-        <h1>Need help with TamilRadio FM?</h1>
+        <h1>Need help with RadioTamil – Live Tamil FM?</h1>
         <p class="muted">If something isn’t working, contact us and we’ll help you quickly.</p>
 
         <div class="box">
@@ -144,7 +148,7 @@
             Please include: station name, your device model, Android version, and what happened.
           </p>
 
-          <a class="btn btn-primary" href="mailto:psgtech.mohan@gmail.com?subject=TamilRadio%20FM%20Support">Email Support</a>
+          <a class="btn btn-primary" href="mailto:psgtech.mohan@gmail.com?subject=RadioTamil%20%E2%80%93%20Live%20Tamil%20FM%20Support">Email Support</a>
         </div>
 
         <div class="box">
